code/tui/snapshots/fullscreen/collaboration_modes/cooperation_alias_fullscreen.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render_effort(&app)
---
  .                                                                [Dashboard]

● Multitask enabled. Thinking effort is unchanged.
















  ────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────── test-model (high)
  ⏸ Manual
  Enter send  ·  ← Dashboard  ·  shift+tab mode  ·  shift+↓/↑ effort
