code/tui/snapshots/fullscreen/collaboration_modes/effort_selector_confirm_restores_composer.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render_effort(&app)
---
  .                                                                [Dashboard]


















  ────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────── Automatic model

  ⏸ Manual · ← Dashboard · ? for shortcuts
