code/tui/snapshots/fullscreen/collaboration_modes/effort_selector_copy_close_restores_draft_english.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: frame_text(terminal.backend().buffer())
---
  .                                                                [Dashboard]

















                                                   Copied 6 chars to clipboard
  ────────────────────────────────────────────────────────────────────────────
  > keep this draft
  ─────────────────────────────────────────────────────────── Automatic model
  ⏸ Manual
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
